[project]
name = "space-invader-rlml"
version = "0.1.0"
description = "Simple space invader reinforcement learning experiment"
authors = [
    {name = "jasonDeichert",email = "jasondeichert@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[atari] (>=1.1.1,<2.0.0)",
    "stable-baselines3 (>=2.6.0,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.11.7,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
